[package]
name = "youtube-chapters"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
# reqwest = { version = "0.12.4", features = ["json"] }
